...
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hideTextView"
            style="@style/loginBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
...
                android:layout_marginTop="12dp"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/eye_slash"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_text"
                    android:hint="●●●●●●●●"
                    android:inputType="textPassword"
...
